[package]
name = "raytracing"
version = "0.1.0"
authors = ["Shuhei Takahashi <takahashi.shuhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["engine", "engine-wasm"]

[dependencies]
anyhow = "1.0.41"
engine = { path = "engine" }
clap = "3.0.0-beta.2"
png = "0.16.8"
rand = { version = "0.8.3", default_features = false }
rayon = "1.5.1"
