[package]
name = "engine-wasm"
version = "0.1.0"
authors = ["Shuhei Takahashi <takahashi.shuhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../engine", default_features = false }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.51"
rand = { version = "0.8.3", default_features = false }
wasm-bindgen = "0.2.74"
