[package]
name = "engine"
version = "0.1.0"
authors = ["Shuhei Takahashi <takahashi.shuhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]

[dependencies]
anyhow = "1.0.41"
itertools = "0.10.0"
jpeg-decoder = "0.1.22"
rand = { version = "0.8.3", default_features = false }
rand_pcg = "0.3.0"
rayon = { version = "1.5.1", optional = true }
